--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,29 @@
 html,
 body,
-body>div:first-child,
+body > div:first-child,
 div#__next,
-div#__next>div {
+div#__next > div {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: Poppins, MontserratVariable, Montserrat, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family:
+    Poppins,
+    MontserratVariable,
+    Montserrat,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 body {
   margin: 0;
-  color: #2E2E2E;
+  color: #2e2e2e;
 }
